fim das aulas de python com mysql
coisas que fiz diferentes da aula

-> utilizei try e excepts para validar erros no sistema

-> Utilizei inputs para coletar informações dos usuários

-> utilizei estruturas condicionais para validar as entradas de usuário

-> Utilizei o isnumeric para verificar a presença de valores inteiros em dados categóricos

--- a/BancoDeDados.ipynb
+++ b/BancoDeDados.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1eeb7dbf",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Banco criado com sucesso\n"
+      "Falha na criação do banco de dados:  (1007, \"Can't create database 'twdbd'; database exists\")\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ab935644",
    "metadata": {},
    "outputs": [
@@ -1000,25 +1000,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "baa0cb7e",
+   "execution_count": 7,
+   "id": "65a9f0b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Falha na comunicação com o servidor:  (1046, 'No database selected')\n"
+     ]
+    }
+   ],
    "source": [
+    "# Ira inspecionar o bloco que atualiza registros no banco de dados\n",
     "try:\n",
     "    \n",
-    "    nome_tabela = input(\"Escreva o nome da tabela que você quer atualizar\")\n",
+    "    # Ira conter o nome da tabela que será atualizada\n",
+    "    nome_tabela = input(\"Informe o nome da tabela que será atualizada\")\n",
     "\n",
-    "    id_dado = input(\"Escreva o id da tabela que você quer atualizar\")\n",
+    "    # Ira conter o id que localiza o dado que será atualizado.\n",
+    "    id_dado = input(\"Informe o id do registro que será atualizado\")\n",
+    "\n",
+    "    # Para evitar problemas futuros com o except valuerror (que identifica erro de tipo)\n",
+    "    # precisamos receber o dado como string e converte-lo para int (dessa maneira, o\n",
+    "    # bloco except será chamado no momento correto, ou seja, após a conversão para\n",
+    "    # inteiro).\n",
     "    \n",
+    "    # Descrição do problema: Basicamente, quando passamos o tipo do input como int, o programa aciona o valuerror. \n",
+    "    id = int(id_dado)\n",
+    "\n",
+    "    # Ira conter a opção que o usuário quer atualizar. O upper irá transsformar todas\n",
+    "    # as letras em maiusculas, pois, dessa maneira ficará mais fácil de validar a escolha\n",
+    "    # do usuário. \n",
+    "    opcao = input(\"Escolha o dado que você quer atualizar: NOME, ARMA, TUDO\").upper()\n",
+    "\n",
+    "    if opcao == \"NOME\":\n",
+    "        \n",
+    "        # Se o usuário escolher nome, iremos pedir para que o usuário\n",
+    "        # digite o novo nome do registro        \n",
+    "        nome = input(\"Escreva o novo nome do registro\")\n",
+    "        \n",
+    "        # Após a coleta do novo nome do registro, vamos verificar se\n",
+    "        # há a presença de valores núméricos nos dados usando a função\n",
+    "        # isnumeric que retorna um valor booleano True caso o valor tenha\n",
+    "        # números.\n",
+    "        if nome.isnumeric() == True:\n",
+    "            \n",
+    "            # Se a condição for verdadeira, vamos imprimir essa mensagem.\n",
+    "            print(\"Por favor, não digite números no campo de nome\")\n",
+    "\n",
+    "        else:\n",
+    "            \n",
+    "            # Se a condição anterior não for verdadeira, vamos iniciar\n",
+    "            # o processo de update.\n",
+    "            \n",
+    "            # Ira conter o comando de update\n",
+    "            sql_query = f\"UPDATE {nome_tabela} SET nome = '{nome}' WHERE id = '{id}'\"\n",
+    "            \n",
+    "            # Ira executar o comando de update\n",
+    "            cursor.execute(sql_query)\n",
+    "            \n",
+    "            # Mensagem que será exibida após a execução bem sucedida do\n",
+    "            # bloco de código.\n",
+    "            print(\"Nome atualizado com sucesso\")\n",
+    "\n",
+    "    elif opcao == \"ARMA\":\n",
+    "        \n",
+    "        # Se o usuário escolher arma, vamos pedir para o usuário\n",
+    "        # digitar o novo nome da arma do registro.        \n",
+    "        arma = input(\"Escreva a nova arma do registro\")\n",
+    "        \n",
+    "        # Após a coleta do nome da arma, vamos verificar se há a presença\n",
+    "        # de valores numéricos no nome da arma usando a função isnumeric\n",
+    "        if arma.isnumeric() == True:\n",
+    "            \n",
+    "            # Se a condição for verdadeira, vamos imprimir essa mensagem\n",
+    "            print(\"Por favor, não digite numeros no campo de armas\")\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            # Se a condição anterior for falsa, vamos iniciar o processo\n",
+    "            # de atualização do nome da arma.\n",
+    "            \n",
+    "            # Irá conter o comando de update\n",
+    "            sql_query = f\"UPDATE {nome_tabela} SET arma = '{arma}' WHERE id = '{id}'\"\n",
+    "            \n",
+    "            # Ira executar o comando de update\n",
+    "            cursor.execute(sql_query)\n",
+    "            \n",
+    "            # Mensagem que será exibida após a execução bem sucedida \n",
+    "            # do bloco.\n",
+    "            print(\"Arma atualizada com sucesso\")\n",
+    "\n",
+    "    elif opcao == \"TUDO\":\n",
+    "        \n",
+    "        # Se o usuário escolher a opção TUDO, iremos iniciar o processo\n",
+    "        # de atualizar todos os campos da tabela escolhida.\n",
+    "        \n",
+    "        # Solicitando o novo nome do registro\n",
+    "        nome = input(\"Escreva o novo nome do registro\")\n",
+    "        \n",
+    "        # Solicitando o novo nome da arma do registro.\n",
+    "        arma = input(\"Escreva a nova arma do registro\")\n",
+    "        \n",
+    "        # Verificando se há a presença de valores numéricos nos\n",
+    "        # dados informados.\n",
+    "        if nome.isnumeric() == True or arma.isnumeric() == True:\n",
+    "            \n",
+    "            # Se a condição for verdadeira, vamos imprimir essa mensagem.\n",
+    "            print(\"Por favor não digite números nos campos\")\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            # Ira conter o comando de update\n",
+    "            sql_query = f\"UPDATE {nome_tabela} SET nome = '{nome}', arma = '{arma}' WHERE id = '{id}'\"\n",
+    "            \n",
+    "            # Ira executar o comando de update\n",
+    "            cursor.execute(sql_query)\n",
+    "            \n",
+    "            print(\"Dados atualizados com sucesso\")\n",
+    "\n",
+    "    else:\n",
+    "        \n",
+    "        # Se o usuário não escolher nenhuma das opções válidas,\n",
+    "        # vamos imprimir essa mensagem.\n",
+    "        print(\"Por favor digite apenas NOME ou ARMA\")\n",
+    "\n",
+    "except pymysql.ProgrammingError as erro: \n",
+    "    \n",
+    "    # Exceção que irá tratar erros de ausência de tabelas, colunas e\n",
+    "    # banco de dados\n",
+    "    print(\"Tabela ou coluna não encontrada: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    # Exceção que irá tratar erros relacionados a comunicação com o servidor,\n",
+    "    # como por exemplo, falhas na conexão\n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)\n",
+    "\n",
+    "except ValueError as erro:\n",
+    "    \n",
+    "    # Ira tratar problemas de string nos campos de id\n",
+    "    print(\"Por favor não digite letras no id: \", erro)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfe50cdf",
+   "metadata": {},
+   "source": [
+    "Verificando se os dados foram atualizados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e0a8d99a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('caio', 'espada', 3)\n",
+      "('Gleen', 'Pistola', 4)\n",
+      "('Daryl', 'Besta', 5)\n",
+      "('Carol', 'Metralhadora', 6)\n",
+      "('Marcos', 'Arco e Flecha', 9)\n",
+      "('ana', 'faca', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql_query = \"SELECT * FROM comalexandria\"\n",
+    "\n",
+    "cursor.execute(sql_query)\n",
+    "\n",
+    "for dado in cursor:\n",
+    "    \n",
+    "    print(dado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e53089a7",
+   "metadata": {},
+   "source": [
+    "Apagando tabelas do banco usando DROP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c86cc4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabela excluida com sucesso\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Irá inspecionar o bloco que exclui tabelas do banco de dados.\n",
+    "try:\n",
+    "    \n",
+    "    # Irá conter o nome da tabela que será excluida.\n",
+    "    nome_tabela = input(\"Escreva o nome da tabela que será excluida\")\n",
+    "    \n",
+    "    # Ira conter o comando que exclui tabelas\n",
+    "    sql_query = f\"DROP TABLE {nome_tabela}\"\n",
+    "    \n",
+    "    # Ira executar o comando.\n",
+    "    cursor.execute(sql_query)\n",
+    "    \n",
+    "    print(\"Tabela excluida com sucesso\")\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "\n",
+    "    # Ira tratar erros de conexão ou ausência de tabelas\n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)\n",
+    "    \n",
+    "\n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    # Ira tratar erros relacionados a ausência de tabelas ou colunas\n",
+    "    print(\"Tabela não encontrada: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04afd0fa",
+   "metadata": {},
+   "source": [
+    "Verificando se as tabelas foram excluidas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9f42cd2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('comalexandria',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql_query = \"SHOW TABLES\"\n",
+    "\n",
+    "cursor.execute(sql_query)\n",
+    "\n",
+    "for dado in cursor:\n",
+    "    \n",
+    "    print(dado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30c58464",
+   "metadata": {},
+   "source": [
+    "excluindo registros das tabelas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d994ba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registro apagado com sucesso\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ira inspecionar o bloco de código que exclui registros das tabelas.\n",
+    "try:\n",
+    "    \n",
+    "    # Irá conter o nome da tabela que terá os registros apagados.\n",
+    "    nome_tabela = input(\"Escreva o nome da tabela que terá os registros excluidos\")\n",
+    "    \n",
+    "    # Para evitar problemas com o valuerror, vamos mandar o id como\n",
+    "    # string e converte-lo para inteiro\n",
+    "    id_dado = input(\"Escreva o id do dado que será apagado\")\n",
+    "    \n",
+    "    # Ira converter o dado para id.\n",
     "    id = int(id_dado)\n",
     "    \n",
-    "    if id.isnumeric == True:\n",
-    "        \n",
-    "        opcao = input(\"Escolha o que você quer atualizar: NOME, ARMA, ID, TUDO\").upper()\n",
-    "        \n",
-    "        if opcao ==\n",
-    "\n"
+    "    # Irá conter o comando que deleta registros das tabelas.\n",
+    "    sql_query = f\"DELETE FROM {nome_tabela} WHERE ID = '{id}'\"\n",
+    "    \n",
+    "    # Irá executar o comando\n",
+    "    cursor.execute(sql_query)\n",
+    "    \n",
+    "    print(\"Registro apagado com sucesso\")\n",
+    "\n",
+    "except pymysql.ProgrammingError as erro:\n",
+    "    \n",
+    "    # Ira lidar com erros de ausência de tabelas ou ids\n",
+    "    print(\"Tabela não encontrada: \", erro)\n",
+    "\n",
+    "except pymysql.OperationalError as erro:\n",
+    "    \n",
+    "    # Irá lidar com falhas na comunicação como por exemplo, falha na\n",
+    "    # conexão com o servidor ou banco de dados inexistenets\n",
+    "    print(\"Falha na comunicação com o servidor: \", erro)\n",
+    "\n",
+    "except ValueError as erro:\n",
+    "    \n",
+    "    # Ira lidar com erros no campo de id (letras nos campos de dados inteiros)\n",
+    "    print(\"Por favor, não digite numeros no campo de id: \", erro)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cb7d279",
+   "metadata": {},
+   "source": [
+    "Verificando se o registro foi apagado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6b98a3ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Daryl', 'Besta', 5)\n",
+      "('Marcos', 'Arco e Flecha', 9)\n",
+      "('ana', 'faca', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql_query = f\"SELECT * FROM {nome_tabela}\"\n",
+    "\n",
+    "cursor.execute(sql_query)\n",
+    "\n",
+    "for dado in cursor:\n",
+    "    \n",
+    "    print(dado)"
    ]
   }
  ],
